--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.9",
+    "@eslint/js": "^9.13.0",
     "chokidar-cli": "^3.0.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-jest": "^28.8.3",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
     "jest-fail-on-console": "^3.1.2",
     "prettier": "3.2.4"
